--- a/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
@@ -10,7 +10,7 @@
 	--color--text--tint-1: var(--p--color--gray-320);
 	--color--text--tint-2: var(--p--color--gray-740);
 	--color--text--tint-3: var(--p--color--gray-820);
-	--color--text--danger: var(--p--color--alt-c-330);
+	--color--text--danger: var(--color--red-400);
 
 	// Foreground
 	--color--foreground--shade-2: var(--p--color--gray-200);
@@ -91,22 +91,22 @@
 	--node--type-main--color: var(--p--color--gray-420);
 
 	// Sticky
-	--sticky--color--background: var(--p--color--alt-d-780);
-	--sticky--border-color: var(--p--color--alt-d-680);
+	--sticky--color--background: var(--color--yellow-800);
+	--sticky--border-color: var(--color--yellow-700);
 	--sticky--color--text: var(--p--color--gray-040);
 	--sticky--code--color--text: var(--p--color--secondary-170);
 	--sticky--code--color--background: var(--p--color--gray-70-a-010);
 
-	--sticky--color--background--variant-1: var(--p--color--alt-d-780);
-	--sticky--border-color--variant-1: var(--p--color--alt-d-680);
+	--sticky--color--background--variant-1: var(--color--yellow-800);
+	--sticky--border-color--variant-1: var(--color--yellow-700);
 	--sticky--color--background--variant-2: var(--p--color--alt-b-780);
 	--sticky--border-color--variant-2: var(--p--color--alt-b-680);
-	--sticky--color--background--variant-3: var(--p--color--alt-c-730);
-	--sticky--border-color--variant-3: var(--p--color--alt-c-630);
+	--sticky--color--background--variant-3: var(--color--red-900);
+	--sticky--border-color--variant-3: var(--color--red-800);
 	--sticky--color--background--variant-4: var(--p--color--alt-a-800);
 	--sticky--border-color--variant-4: var(--p--color--alt-a-700);
-	--sticky--color--background--variant-5: var(--p--color--alt-e-780);
-	--sticky--border-color--variant-5: var(--p--color--alt-e-680);
+	--sticky--color--background--variant-5: var(--color--blue-800);
+	--sticky--border-color--variant-5: var(--color--blue-700);
 	--sticky--color--background--variant-6: var(--p--color--secondary-720);
 	--sticky--border-color--variant-6: var(--p--color--secondary-570);
 	--sticky--color--background--variant-7: var(--p--color--gray-740);
@@ -130,8 +130,8 @@
 	// Expressions, autocomplete, infobox
 	--expression-editor--resolvable--color--foreground--valid: var(--p--color--alt-a-300);
 	--expression-editor--resolvable--color--background--valid: var(--p--color--alt-a-600-a-025);
-	--expression-editor--resolvable--color--foreground--invalid: var(--p--color--alt-c-230);
-	--expression-editor--resolvable--color--background--invalid: var(--p--color--alt-c-480-a-020);
+	--expression-editor--resolvable--color--foreground--invalid: var(--color--red-300);
+	--expression-editor--resolvable--color--background--invalid: var(--color--red-alpha-020);
 	--expression-editor--resolvable--color--foreground--pending: var(--color--text);
 	--expression-editor--resolvable--color--background--pending: var(--p--color--gray-70-a-010);
 	--expression-editor--color--background: var(--p--color--gray-800);
@@ -164,7 +164,7 @@
 	--json--string--color: var(--p--color--secondary-270);
 	--json--key--color: var(--color--text--shade-1);
 	--json--brackets--color: var(--p--color--gray-670);
-	--json--brackets--color--hover: var(--p--color--alt-e-430);
+	--json--brackets--color--hover: var(--color--blue-400);
 	--json--line--color: var(--p--color--gray-200);
 	--json--highlight--color: var(--color--background);
 	--code--color--background: var(--p--color--gray-820);
@@ -225,10 +225,10 @@
 	// Button success, warning, danger
 	--button--color--text--danger: var(--p--color--white);
 	--button--border-color--danger: transparent;
-	--button--outline-color--danger--focus: var(--p--color--alt-c-230);
+	--button--outline-color--danger--focus: var(--color--red-300);
 	--button--color--text--danger--disabled: var(--p--color--white-a-025);
 	--button--border-color--danger--disabled: transparent;
-	--button--color--background--danger--disabled: var(--p--color--alt-c-480-a-020);
+	--button--color--background--danger--disabled: var(--color--red-alpha-020);
 
 	// Text button
 	--text-button--color--text--secondary: var(--p--color--gray-320);
@@ -283,7 +283,7 @@
 	--callout--color--background--warning: var(--p--color--alt-b-780);
 	--callout--color--text--warning: var(--p--color--white);
 	--callout--border-color--danger: var(--color--danger);
-	--callout--color--background--danger: var(--p--color--alt-c-730);
+	--callout--color--background--danger: var(--color--red-900);
 	--callout--color--text--danger: var(--p--color--white);
 	--callout--icon-color--danger: var(--color--danger);
 	--callout--border-color--secondary: var(--color--secondary);
@@ -292,8 +292,8 @@
 
 	// Dialogs and overlays
 	--dialog--color--background: var(--p--color--gray-800);
-	--dialog--overlay--color--background: var(--p--color--alt-g-700-a-075);
-	--dialog--overlay--color--background--dark: var(--p--color--alt-g-700-a-075);
+	--dialog--overlay--color--background: var(--color--slate-alpha-700);
+	--dialog--overlay--color--background--dark: var(--color--slate-alpha-700);
 
 	// Avatar
 	--avatar--color--text: var(--p--color--white);
@@ -322,7 +322,7 @@
 	--mfa--lose-access--color--text: var(--color--danger);
 
 	// Text highlight
-	--text-highlight--color--background: var(--p--color--alt-d-680);
+	--text-highlight--color--background: var(--color--yellow-700);
 
 	// AI
 	--node-type--color--background--l: 20%;
