--- a/packages/frontend/@n8n/design-system/src/css/_tokens.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.scss
@@ -42,13 +42,13 @@
 
 	// Secondary
 	/* stylelint-disable-next-line @n8n/css-var-naming */
-	--color--secondary--shade-1: var(--color-secondary-shade-1, var(--p--color--secondary-570));
+	--color--secondary--shade-1: var(--color-secondary-shade-1, var(--color--purple-700));
 	/* stylelint-disable-next-line @n8n/css-var-naming */
-	--color--secondary: var(--color-secondary, var(--p--color--secondary-470));
+	--color--secondary: var(--color-secondary, var(--color--purple-600));
 	/* stylelint-disable-next-line @n8n/css-var-naming */
-	--color--secondary--tint-1: var(--color-secondary-tint-1, var(--p--color--secondary-170));
+	--color--secondary--tint-1: var(--color-secondary-tint-1, var(--color--purple-300));
 	/* stylelint-disable-next-line @n8n/css-var-naming */
-	--color--secondary--tint-2: var(--color-secondary-tint-3, var(--p--color--secondary-070));
+	--color--secondary--tint-2: var(--color-secondary-tint-3, var(--color--purple-200));
 
 	// Success
 	/* stylelint-disable-next-line @n8n/css-var-naming */
@@ -244,8 +244,8 @@
 	--sticky--border-color--variant-4: var(--color--green-300);
 	--sticky--color--background--variant-5: var(--color--blue-100);
 	--sticky--border-color--variant-5: var(--color--blue-200);
-	--sticky--color--background--variant-6: var(--p--color--secondary-070);
-	--sticky--border-color--variant-6: var(--p--color--secondary-170);
+	--sticky--color--background--variant-6: var(--color--purple-200);
+	--sticky--border-color--variant-6: var(--color--purple-300);
 	--sticky--color--background--variant-7: var(--p--color--gray-010);
 	--sticky--border-color--variant-7: var(--p--color--gray-120);
 
@@ -338,11 +338,11 @@
 	--code-tags--heading--color: #005cc5;
 	--code-tags--invalid--color: #cb2431;
 	--code-tags--comment--color: #6a737d;
-	--json--color: var(--p--color--secondary-570);
+	--json--color: var(--color--purple-700);
 	--json--null--color: var(--color--red-600);
 	--json--boolean--color: var(--color--green-600);
 	--json--number--color: var(--color--green-600);
-	--json--string--color: var(--p--color--secondary-570);
+	--json--string--color: var(--color--purple-700);
 	--json--key--color: var(--p--color--gray-670);
 	--json--brackets--color: var(--p--color--gray-670);
 	--json--brackets--color--hover: var(--color--blue-400);
@@ -361,7 +361,7 @@
 	--code--indentation-marker--color: var(--p--color--gray-070);
 	--code--indentation-marker--color--active: var(--p--color--gray-200);
 	--line-break--color: var(--p--color--gray-320);
-	--code--line-break--color: var(--p--color--secondary-270);
+	--code--line-break--color: var(--color--purple-400);
 
 	// Tag
 	--tag--height: 20px;
@@ -451,7 +451,7 @@
 	--execution-card--border-color--new: var(--p--color--gray-200);
 	--execution-card--border-color--success: var(--color--green-300);
 	--execution-card--border-color--error: var(--color--red-300);
-	--execution-card--border-color--waiting: var(--p--color--secondary-170);
+	--execution-card--border-color--waiting: var(--color--purple-300);
 	--execution-card--border-color--running: var(--color--gold-200);
 	--execution-card--border-color--unknown: var(--p--color--gray-120);
 	--execution-card--color--background: var(--color--foreground--tint-2);
@@ -465,7 +465,7 @@
 	--run-data--color--background: var(--p--color--gray-070);
 	--ndvv2--run-data--color--background: var(--p--color--gray-040);
 	--ndv--droppable-parameter--color: var(--color--secondary);
-	--ndv--droppable-parameter--color--background: var(--p--color--secondary-470-a-010);
+	--ndv--droppable-parameter--color--background: var(--color--purple-alpha-100);
 	--ndv--droppable-parameter--color--background--active: var(--color--green-alpha-100);
 	--ndv--back--color--text: var(--p--color--white);
 
@@ -740,7 +740,7 @@
 	--icon--color--hover: var(--p--color--primary-320);
 
 	/* Ag Grid */
-	--grid--row--color--background--selected: var(--p--color--secondary-070);
+	--grid--row--color--background--selected: var(--color--purple-200);
 	--grid--cell--border-color--editing: 2px solid var(--color--secondary);
 
 	--command-bar-item--color--background--hover: var(--color--background);
